Fixed CSS issue distorting round images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@ img {
 
 .img-circle {
     max-height: 180px;
+    max-width: 180px;
     margin: 0 0 20px 0;
     display: none;
     text-align: center;
